tests/src/frontend/syntax/invalid/dollar_variable.sk
fun main(): String {
  $someVariable = 10;
}
